Only insert the icpf atom in ProRes mkv packets if it isn't already present.

The patch allows to read broken mkv files containing ProRes as written by
the Haali muxer.
Fixes a part of ticket #3434.